force-app/main/default/objects/SIGHTS_OPTION_INF__x/SIGHTS_OPTION_INF__x.object-meta.xml
<CustomObject>
    <description>SIGHTS_OPTION_INF</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>SIGHTS_OPTION_INF</externalName>
    <label>Sightsオプション情報</label>
</CustomObject>