force-app/main/default/objects/SIGHTS_OPTION_INF__x/fields/bulk_download__c.field-meta.xml
<CustomField>
    <fullName>bulk_download__c</fullName>
    <description>bulk_download</description>
    <externalDeveloperName>bulk_download</externalDeveloperName>
    <label>bulk_download</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>