force-app/main/default/objects/SIGHTS_OPTION_INF__x/fields/sights_option_inf_id__c.field-meta.xml
<CustomField>
    <fullName>sights_option_inf_id__c</fullName>
    <description>sights_option_inf_id</description>
    <externalDeveloperName>sights_option_inf_id</externalDeveloperName>
    <label>sights_option_inf_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>