force-app/main/default/objects/SIGHTS_OPTION_INF__x/fields/youtube_live__c.field-meta.xml
<CustomField>
    <fullName>youtube_live__c</fullName>
    <description>youtube_live</description>
    <externalDeveloperName>youtube_live</externalDeveloperName>
    <label>youtube_live</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>